--- a/cjoli.Server/wwwroot/locales/translation-en.json
+++ b/cjoli.Server/wwwroot/locales/translation-en.json
@@ -38,6 +38,10 @@
     "whatsapp": "WhatsApp",
     "qrCode": "QRCode"
   },
+  "event": {
+    "friendly": "🤝 Friendly match",
+    "resurfacing": "🚛 Resurfacing"
+  },
   "error": {
     "invalid": "{{field}} is invalid",
     "required": "{{field}} is required",
