--- a/cjoli.Server/wwwroot/locales/translation-fr.json
+++ b/cjoli.Server/wwwroot/locales/translation-fr.json
@@ -38,6 +38,10 @@
     "whatsapp": "WhatsApp",
     "qrCode": "QRCode"
   },
+  "event": {
+    "friendly": "🤝 Match amical",
+    "resurfacing": "🚛 Surfaçage"
+  },
   "error": {
     "invalid": "{{field}} est invalide",
     "required": "{{field}} est requis",
