--- a/cjoli.Server/wwwroot/locales/translation-es.json
+++ b/cjoli.Server/wwwroot/locales/translation-es.json
@@ -5,10 +5,13 @@
     "fr": "Francés",
     "pt": "Portugués",
     "es": "Español",
-    "de": "Alemán"
+    "de": "Alemán",
+    "nl": "Holandés"
   },
   "user": {
-    "guest": "Invitado"
+    "guest": "Invitado",
+    "favoriteSaved": "Equipo favorito guardado",
+    "favoriteRemoved": "Equipo favorito eliminado"
   },
   "menu": {
     "home": "Inicio",
@@ -17,16 +20,32 @@
     "register": "Registrarse",
     "update": "Actualizar",
     "logout": "Cerrar sesión",
-    "active": "Activo",
     "refresh": "Actualizar",
     "refreshEstimate": "Actualizar estimación",
     "custom": "Personalizado",
-    "useCustom": "Usar personalizado",
-    "menu": "Menú"
+    "useCustom": "Usar estimación personal",
+    "menu": "Menú",
+    "setting": "Configuración",
+    "admin": "Administración",
+    "gallery": "Fotos"
+  },
+  "home": {
+    "tourneyNotConfigured": "Torneo no configurado",
+    "noImage": "No hay fotos del torneo"
+  },
+  "gallery": {
+    "sendPhoto": "Envía tus mejores fotos:",
+    "whatsapp": "WhatsApp",
+    "qrCode": "Código QR"
+  },
+  "event": {
+    "friendly": "🤝 Partido amistoso",
+    "resurfacing": "🚛 Reacondicionamiento del hielo"
   },
   "error": {
-    "invalid": "{{field}} es inválido",
-    "required": "{{field}} es requerido"
+    "invalid": "{{field}} no es válido",
+    "required": "{{field}} es obligatorio",
+    "notAuthorize": "Usuario no autorizado"
   },
   "button": {
     "submit": "Enviar",
@@ -34,12 +53,16 @@
     "close": "Cerrar",
     "save": "Guardar",
     "send": "Enviar",
-    "botAI": "Chat con BotAI",
-    "back": "Volver",
-    "edit": "Editar"
+    "botAI": "Chatear con BotAI",
+    "back": "Atrás",
+    "edit": "Editar",
+    "yes": "Sí",
+    "no": "No",
+    "newTourney": "Nuevo Torneo"
   },
   "penalty": {
     "label": "Penalizaciones",
+    "tooltip_zero": "Sin penalización",
     "tooltip_one": "1 penalización",
     "tooltip_other": "{{count}} penalizaciones"
   },
@@ -63,8 +86,8 @@
     },
     "error": {
       "invalidLogin": "Inicio de sesión inválido",
-      "register": "No se puede registrar la cuenta",
-      "update": "No se puede actualizar la cuenta"
+      "register": "No se pudo registrar la cuenta",
+      "update": "No se pudo actualizar la cuenta"
     },
     "success": {
       "register": "Cuenta creada",
@@ -78,14 +101,49 @@
     "select": "Seleccionar equipo",
     "chart": {
       "general": "General",
-      "timeline": "Línea de tiempo"
+      "timeline": "Cronología"
     },
     "form": {
-      "logo": "Logotipo",
-      "youngest": "Más joven (fecha)"
+      "logo": "Logo",
+      "youngest": "Más joven (fecha)",
+      "name": "Nombre",
+      "shortName": "Nombre corto",
+      "fullName": "Nombre completo",
+      "alias": "Alias",
+      "primaryColor": "Color primario",
+      "secondaryColor": "Color secundario"
     },
     "error": {
-      "update": "No se puede actualizar el equipo"
+      "update": "No se pudo actualizar el equipo"
+    }
+  },
+  "ranking": {
+    "rank": "Rango",
+    "calculation": "Cálculo",
+    "equality": "Igualdad",
+    "victory": "Victoria",
+    "defeat": "Derrota",
+    "source": {
+      "win": "Más victorias",
+      "win-min": "Menos victorias",
+      "loss": "Menos derrotas",
+      "loss-min": "Más derrotas",
+      "goalDiff": "Mejor diferencia de goles",
+      "goalDiff-min": "Peor diferencia de goles",
+      "goalDiffDirect": "Mejor diferencia de goles (directa)",
+      "goalDiffDirect-min": "Peor diferencia de goles (directa)",
+      "goalFor": "Más goles a favor",
+      "goalFormin": "Menos goles a favor",
+      "goalForDirect": "Más goles a favor (directo)",
+      "goalForDirect-min": "Menos goles a favor (directo)",
+      "goalAgainst": "Más goles en contra",
+      "goalAgainst-min": "Menos goles en contra",
+      "goalAgainstDirect": "Más goles en contra (directo)",
+      "goalAgainstDirect-min": "Menos goles en contra (directo)",
+      "youngest": "Más joven",
+      "equal": "Igual",
+      "penalty": "Menos penalizaciones",
+      "penalty-min": "Más penalizaciones"
     }
   },
   "message": "Mensaje",
@@ -100,26 +158,39 @@
     "loss": "Derrotas",
     "goalFor": "Goles a favor",
     "goalAgainst": "Goles en contra",
-    "shutOut": "Sin encajar goles",
+    "shutOut": "Imbatido",
     "goalDiff": "Diferencia de goles",
     "penalty": "Penalizaciones",
     "simulation": "Simulación",
-    "first": "1.º",
-    "second": "2.º",
-    "third": "3.º",
-    "rankth": "{{rank}}.º"
+    "first": "1º",
+    "second": "2º",
+    "third": "3º",
+    "rankth": "{{rank}}º",
+    "users": "Usuarios",
+    "score": "Puntuación",
+    "perfect": "Perfecto",
+    "winner": "Ganador",
+    "diff": "Diferencia",
+    "goal": "Gol"
   },
   "select": {
     "live": "En vivo",
-    "coming": "Próximos...",
-    "past": "Pasados"
+    "coming": "Próximamente...",
+    "past": "Pasado",
+    "addTourney": "Añadir un torneo"
   },
   "match": {
     "blockShot": {
-      "title": "Guardar Puntuación",
-      "error": "No se puede registrar la puntuación.<br/>El partido debe terminar en una tanda de penaltis.<br/>Por favor, indica un ganador."
+      "title": "Guardar resultado",
+      "error": "No se pudo registrar el resultado.<br/>El partido debe terminar con una tanda de penaltis.<br/>Por favor, indique un ganador."
     },
     "compare": "Comparar",
-    "forfeit": "Abandono"
+    "forfeit": "Descalificación",
+    "simulated": "Resultado simulado"
+  },
+  "betScore": {
+    "finalScore": "Resultado final",
+    "forecastScore": "Resultado previsto",
+    "point": "Puntos"
   }
 }
