--- a/cjoli.Server/wwwroot/locales/translation-pt.json
+++ b/cjoli.Server/wwwroot/locales/translation-pt.json
@@ -10,50 +10,52 @@
   },
   "user": {
     "guest": "Convidado",
-    "favoriteSaved": "Equipe favorita salva",
-    "favoriteRemoved": "Equipe favorita removida"
+    "favoriteSaved": "Equipa favorita guardada",
+    "favoriteRemoved": "Equipa favorita removida"
   },
   "menu": {
     "home": "Início",
     "ranking": "Classificação",
-    "login": "Entrar",
-    "register": "Registrar",
+    "login": "Iniciar sessão",
+    "register": "Registar",
     "update": "Atualizar",
-    "logout": "Sair",
+    "logout": "Terminar sessão",
     "refresh": "Atualizar",
     "refreshEstimate": "Atualizar estimativa",
     "custom": "Personalizado",
-    "useCustom": "Usar estimativa pessoal",
+    "useCustom": "usar estimativa pessoal",
     "menu": "Menu",
-    "setting": "Configurações",
+    "setting": "Definições",
     "admin": "Administração",
-    "gallery": "Fotos"
+    "gallery": "Fotos",
+    "cast": "Apresentação"
   },
   "home": {
     "tourneyNotConfigured": "Torneio não configurado",
-    "noImage": "Nenhuma foto do torneio"
+    "noImage": "Sem fotos do torneio"
   },
   "gallery": {
-    "sendPhoto": "Envie suas melhores fotos:",
+    "sendPhoto": "Envia as tuas fotos",
     "whatsapp": "WhatsApp",
-    "qrCode": "Código QR"
+    "qrCode": "Código QR",
+    "selectImage": "Clica para selecionar a tua imagem"
   },
   "event": {
-    "friendly": "🤝 Partida amistosa",
-    "resurfacing": "🚛 Manutenção do gelo"
+    "friendly": "🤝 Jogo amigável",
+    "resurfacing": "🚛 Reconstrução do gelo"
   },
   "error": {
     "invalid": "{{field}} é inválido",
     "required": "{{field}} é obrigatório",
-    "notAuthorize": "Usuário não autorizado"
+    "notAuthorize": "Utilizador não autorizado"
   },
   "button": {
-    "submit": "Enviar",
+    "submit": "Submeter",
     "cancel": "Cancelar",
     "close": "Fechar",
-    "save": "Salvar",
+    "save": "Guardar",
     "send": "Enviar",
-    "botAI": "Conversar com BotAI",
+    "botAI": "Conversar com o BotAI",
     "back": "Voltar",
     "edit": "Editar",
     "yes": "Sim",
@@ -61,10 +63,10 @@
     "newTourney": "Novo Torneio"
   },
   "penalty": {
-    "label": "Punições",
-    "tooltip_zero": "Nenhuma punição",
-    "tooltip_one": "1 punição",
-    "tooltip_other": "{{count}} punições"
+    "label": "Penalizações",
+    "tooltip_zero": "Sem penalizações",
+    "tooltip_one": "1 penalização",
+    "tooltip_other": "{{count}} penalizações"
   },
   "simulation": {
     "tooltip": "Simulação",
@@ -75,18 +77,18 @@
   },
   "login": {
     "title": {
-      "login": "Entrar",
-      "register": "Registrar",
+      "login": "Iniciar sessão",
+      "register": "Registar",
       "update": "Atualizar"
     },
     "form": {
-      "login": "Usuário",
-      "password": "Senha",
-      "confirmPassword": "Confirmar senha"
+      "login": "Utilizador",
+      "password": "Palavra-passe",
+      "confirmPassword": "Confirmar palavra-passe"
     },
     "error": {
-      "invalidLogin": "Login inválido",
-      "register": "Não foi possível registrar a conta",
+      "invalidLogin": "Dados de início de sessão inválidos",
+      "register": "Não foi possível registar a conta",
       "update": "Não foi possível atualizar a conta"
     },
     "success": {
@@ -98,27 +100,27 @@
     "title": "Editar {{team}}",
     "position": "Posição",
     "youngest": "Mais jovem",
-    "select": "Selecionar equipe",
+    "select": "Selecionar equipa",
     "chart": {
       "general": "Geral",
-      "timeline": "Linha do tempo"
+      "timeline": "Linha temporal"
     },
     "form": {
-      "logo": "Logo",
+      "logo": "Logótipo",
       "youngest": "Mais jovem (data)",
       "name": "Nome",
       "shortName": "Nome curto",
       "fullName": "Nome completo",
-      "alias": "Apelido",
+      "alias": "Alcunha",
       "primaryColor": "Cor primária",
       "secondaryColor": "Cor secundária"
     },
     "error": {
-      "update": "Não foi possível atualizar a equipe"
+      "update": "Não foi possível atualizar a equipa"
     }
   },
   "ranking": {
-    "rank": "Posição",
+    "rank": "Classificação",
     "calculation": "Cálculo",
     "equality": "Igualdade",
     "victory": "Vitória",
@@ -128,69 +130,69 @@
       "win-min": "Menos vitórias",
       "loss": "Menos derrotas",
       "loss-min": "Mais derrotas",
-      "goalDiff": "Melhor saldo de gols",
-      "goalDiff-min": "Pior saldo de gols",
-      "goalDiffDirect": "Melhor saldo de gols (direto)",
-      "goalDiffDirect-min": "Pior saldo de gols (direto)",
-      "goalFor": "Mais gols marcados",
-      "goalFormin": "Menos gols marcados",
-      "goalForDirect": "Mais gols marcados (direto)",
-      "goalForDirect-min": "Menos gols marcados (direto)",
-      "goalAgainst": "Mais gols sofridos",
-      "goalAgainst-min": "Menos gols sofridos",
-      "goalAgainstDirect": "Mais gols sofridos (direto)",
-      "goalAgainstDirect-min": "Menos gols sofridos (direto)",
+      "goalDiff": "Melhor diferença de golos",
+      "goalDiff-min": "Pior diferença de golos",
+      "goalDiffDirect": "Melhor diferença de golos (direto)",
+      "goalDiffDirect-min": "Pior diferença de golos (direto)",
+      "goalFor": "Mais golos marcados",
+      "goalFormin": "Menos golos marcados",
+      "goalForDirect": "Mais golos marcados (direto)",
+      "goalForDirect-min": "Menos golos marcados (direto)",
+      "goalAgainst": "Mais golos sofridos",
+      "goalAgainst-min": "Menos golos sofridos",
+      "goalAgainstDirect": "Mais golos sofridos (direto)",
+      "goalAgainstDirect-min": "Menos golos sofridos (direto)",
       "youngest": "Mais jovem",
       "equal": "Igual",
-      "penalty": "Menos punições",
-      "penalty-min": "Mais punições"
+      "penalty": "Menos penalizações",
+      "penalty-min": "Mais penalizações"
     }
   },
   "message": "Mensagem",
   "rank": {
     "title": "Classificação",
     "ranking": "Classificação",
-    "team": "Equipe",
+    "team": "Equipa",
     "total": "Pontos",
     "game": "Jogos disputados",
     "win": "Vitórias",
     "neutral": "Empates",
     "loss": "Derrotas",
-    "goalFor": "Gols a favor",
-    "goalAgainst": "Gols contra",
-    "shutOut": "Sem sofrer gols",
-    "goalDiff": "Saldo de gols",
-    "penalty": "Punições",
+    "goalFor": "Golos marcados",
+    "goalAgainst": "Golos sofridos",
+    "shutOut": "Sem sofrer golos",
+    "goalDiff": "Diferença de golos",
+    "penalty": "Penalizações",
     "simulation": "Simulação",
-    "first": "1º",
-    "second": "2º",
-    "third": "3º",
-    "rankth": "{{rank}}º",
-    "users": "Usuários",
+    "first": "1.º",
+    "second": "2.º",
+    "third": "3.º",
+    "rankth": "{{rank}}.º",
+    "users": "Utilizadores",
     "score": "Pontuação",
     "perfect": "Perfeito",
     "winner": "Vencedor",
     "diff": "Diferença",
-    "goal": "Gol"
+    "goal": "Golo"
   },
   "select": {
-    "live": "Ao vivo",
+    "live": "Em direto",
     "coming": "Em breve...",
     "past": "Passado",
-    "addTourney": "Adicionar torneio"
+    "addTourney": "Adicionar Torneio"
   },
   "match": {
     "blockShot": {
-      "title": "Salvar placar",
-      "error": "Não foi possível registrar o placar.<br/>A partida deve terminar em uma disputa de pênaltis.<br/>Indique um vencedor."
+      "title": "Guardar resultado",
+      "error": "Não foi possível guardar o resultado.<br/>O jogo deve terminar em penáltis.<br/>Por favor, indique um vencedor."
     },
     "compare": "Comparar",
     "forfeit": "Desistência",
     "simulated": "Resultado simulado"
   },
   "betScore": {
-    "finalScore": "Placar final",
-    "forecastScore": "Placar previsto",
+    "finalScore": "Resultado final",
+    "forecastScore": "Previsão de resultado",
     "point": "Pontos"
   }
 }
