--- a/cjoli.Server/wwwroot/locales/translation-fr.json
+++ b/cjoli.Server/wwwroot/locales/translation-fr.json
@@ -124,7 +124,9 @@
     "calculation": "Calcul",
     "equality": "Égalité",
     "victory": "Victoire",
+    "victory-direct": "Victoire directe",
     "defeat": "Défaite",
+    "defeat-direct": "Défaite directe",
     "source": {
       "win": "Plus de victoires",
       "win-min": "Moins de victoires",
